porting with scripts is like running with scissors

BUG:288286
REVIEW:103353